# OpenGL_GameProject

./: .gitignore  CMakeLists.txt  README.md  build_errors.txt  imgui.ini  newmap.json  texture.frag  texture.vert
Header/: Animations.h  Camera.h  EBO.h  Fishing.h  GameMap.h  InteractionUI.h  Items.h  Line.h  MapGenerator.h  Menu.h  NewMap.h  Npc.h  Panel.h  Player.h  Shader.h  Texture.h  VAO.h  VBO.h  Vendor.h  Window.h
image/: fishing rod.tsx
logs/: 03-04-2026.txt  04-05-2026.txt  05-05-2026.txt  06-04.2026.txt  06-05-2026.txt  07-04-2026.txt  08-05-2026.txt  10-04-2026.txt  11-05-2026.txt  12-05-2026.txt  13-04-2026.txt  14-04-2026.txt  17-04-2026.txt  20-04-2026.txt  21-04-2026.txt  22-04-2026.txt  27-04-2027.txt  28-04-2026.txt  29-04-2026.txt
shaders/: line.frag  line.vert  map.vert  texture.vert
src/: Animations.cpp  Camera.cpp  EBO.cpp  Fishing.cpp  GameMap.cpp  InteractionUI.cpp  Items.cpp  Line.cpp  MapGenerator.cpp  Menu.cpp  NewMap.cpp  Npc.cpp  Panel.cpp  Player.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  Vendor.cpp  Window.cpp  main.cpp
